bin_PROGRAMS = remaproute
remaproute_SOURCES = main.c cyc.c cyc.h log.c log.h dlist.c dlist.h \
		map.c map.h pavl.c pavl.h opts.c opts.h timespec.c timespec.h \
		sniffer.c sniffer.h demux.c demux.h \
		sender.c sender.h confirm.c confirm.h prober.c prober.h \
		probedb.c probedb.h remap.c remap.h \
		tqueue.c tqueue.h \
		path.c path.h 

# prober.c prober.h \
# curlpost.c curlpost.h 

clean-local:
	-rm -rf *log.txt.* tags
